# IEEE754

./: Makefile.in  README.md  aclocal.m4  arthmetic_templates.h  arthmetic_tests.cpp  arthmetic_tests_pattern.h  comparison_templates.h  comparison_tests.cpp  comparison_tests.h  comparison_tests_pattern.h  config.h.in  configure  configure.in  conversion_templates.h  conversion_tests.cpp  conversion_tests.h  conversion_tests_pattern.h  generic_templates.h  globals.h  main.cpp  time.c
ArthmaticTests.d/: arthmatic_templates.h  arthmatic_tests.cpp  arthmatic_tests.h  arthmatic_tests_pattern.h
ArthmeticTests.d/: arthmetic_templates.h  arthmetic_tests.cpp  arthmetic_tests.h  arthmetic_tests_pattern.h
ComparisonTests.d/: comparison_templates.h  comparison_tests.cpp  comparison_tests.h  comparison_tests_pattern.h
ConversionTests.d/: conversion_templates.h  conversion_tests.cpp  conversion_tests.h  conversion_tests_pattern.h
RoundingTests.d/: rounding_tests.cpp  rounding_tests.h  rounding_tests_pattern.h  rounding_to_nearest.cpp  rounding_to_negative_infinity.cpp  rounding_to_positive_infinity.cpp  rounding_to_zero_tests.cpp  rounding_to_zero_tests.cpp~
include.d/: defined_tests.h  globals.h
