/*******************************************************************************
 * Copyright 2016 Ramzi Maalouf (fourthmuskeeter@yahoo.com).
 *           All rights reserved.
 *
 * File Name : configure.in
 *
 * Description :
 *    -- This file is used by autoconf to create the configure script.
 *
 * Version : 0.1.0
 *
 * Created Date : November 05 2016
 *
 * Modification History :
 *    0.1    RSM    Initial Release
 *
 ******************************************************************************/
AC_INIT(main.cpp)

AC_USE_SYSTEM_EXTENSIONS
AC_CANONICAL_TARGET
AC_CANONICAL_HOST
AC_PROG_CXX
AC_PROG_CXXCPP
AC_ARG_PROGRAM
AC_HEADER_STDC
AC_TYPE_LONG_DOUBLE
AC_TYPE_LONG_LONG_INT
AC_TYPE_UINT8_T
AC_TYPE_UINT32_T
AC_TYPE_INTMAX_T
AC_CHECK_SIZEOF(uint8_t)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(float)
AC_CHECK_SIZEOF(double)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(long double)
AC_CHECK_SIZEOF(intmax_t)

AX_CHECK_COMPILE_FLAG(-std=c++11, [CXXFLAGS="$CPPFLAGS -std=c++11"])

AC_CHECK_LIB(m,pow)
AC_CHECK_TARGET_TOOL([STRIP],strip, no)
if test "x$STRIP" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate strip])
fi

AC_CHECK_TARGET_TOOL([LD],ld, no)
if test "x$LD" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate ld])
fi

AC_CHECK_TARGET_TOOL([AS],as, no)
if test "x$AS" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate as])
fi

AC_CHECK_TARGET_TOOL([NM],nm, no)
if test "x$NM" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate nm])
fi

AC_CHECK_TARGET_TOOL([OBJDUMP],objdump, no)
if test "x$OBJDUMP" == "xno" ; then
AC_MSG_ERROR([Unable to find on appropriate ojdump])
fi
AC_SUBST(CC)
AC_SUBST(CXX)
AC_SUBST(CPP)
AC_SUBST(NM)
AC_SUBST(LD)
AC_SUBST(OBJDUMP)
AC_SUBST(STRIP)
AC_SUBST(AS)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(CXXPPFLAGS)
AC_SUBST(LDFLAGS)
AC_CONFIG_HEADERS(config.h)
AC_OUTPUT(Makefile)
